Resume initial commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jacqueline Young Resume</title>
+  <link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
+</head>
+
+<body class="stackedit">
+  <div class="container"><hr>
+
+    <table>
+      <thead>
+        <tr>
+        <th align="left">Jacqueline Young<em style="font-weight: normal;">a.k.a. Jacqui Tenderwolf</em></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        <td align="left">(770) 853-5363 | <a href="mailto:jacqui@tenderwolf.io">jacqui@tenderwolf.io</a></td>
+        </tr>
+        <tr>
+        <td align="left">Chattanooga, Tennessee</td>
+        </tr>
+        <tr>
+        <td align="left">Drupal <a href="https://www.drupal.org/u/jacqui.tenderwolf">@jacqui.tenderwolf</a></td>
+        </tr>
+      </tbody>
+    </table><hr>
+    
+    <h2 id="objective">Objective</h2>
+      <p>To change careers, transferring skills gained through 20 years of working on auction teams and in small business administration, to front-end Drupal development.</p>
+      <hr>
+    
+    <h2 id="experience">Experience</h2>
+      <h3><strong>Bullseye Auctions & Appraisals,</strong> Lawrenceville, GA - Appraiser</h3>
+        <p><em>2012 - PRESENT</em></p>
+      <h3><strong>Amy Martin Auctions,</strong> Atlanta, GA - Auctioneer</h3>
+        <p><em>2007 - PRESENT</em></p>
+        <p>As a Georgia-state licensed auctioneer and nationally-certified appraiser, I contracted with the two auction companies listed above  to appraise and sell bank-owned assets at auction.</p> 
+        <p><strong>Transferable skills:</strong> Strong interpersonal skills working with teams, clients, and customers. Competent with multiple software packages: Wavebid, Maxanet, Adobe Elements. Accustomed to working independently to meet deadlines.</p<>
+      <h3><strong>Cambyco, Inc.,</strong> Atlanta, GA - Administrative Partner</h3>
+        <p><em>2000 - 2015</em></p>
+        <p>My ex-husband and I ran a diversified investment firm. Among other projects, we developed day trading software with a team of former Microsoft engineers.</p> 
+        <p><strong>Transferable skills:</strong> Strong team-management skills working with programmers to bring a project from vision board to implementation.</p<>
+
+  <h2 id="education">Education</h2>
+    <h3><strong>Drupal Career Online,</strong> Online - <em>Certificate</em></h3>
+      <p>A Drupal career preparatory program through DrupalEasy Academy, licensed by the Florida Department of Education</p>
+      <p><em>August - November 2019</em></p>
+    <h3><strong>Udemy, Freecodecamp, Drupalize.me,</strong> Online - <em>Course completion</em></h3>
+      <p>HTML5, CSS, SCSS, Javascript, JQuery, Git, Bootstrap, Linus OS, Twig</p>
+      <p><em>January 2019 - PRESENT</em></p>
+    <h3><strong>Bennington College,</strong> Vermont - <em>Bachelor of Arts</em></h3>
+      <p>Literature and Languages major, Art History minor</p>
+      <p><em>Graduated 1992</em></p>
+
+  <h2 id="projects">Projects</h2>
+    <p>Develiping a Drupal website to generate appraisal reports.</p>
+
+  <h2 id="drupalcommunity">Drupal Community</h2>
+    <p><a href="https://youtu.be/BGZzTsBjuUE"><strong>"Fixing the Mistakes We All Make as Developers, Leaders and Teams"</strong></a> (2019)<br>
+    DrupalCon Amsterdam, 2019, co-speaker</p>
+    <p><a href="https://www.drupalcampatlanta.com/2019/sessions/hot-topic-conversations-communicating-well-when-you-feel-strongly"><strong>Hot Topic ConversationsL How to Communicate Well When you Feel Strongly</strong></a> (2019)<p>DrupalCamp Atlanta, 2019, speaker</p><br>
+    <p>Attended 4 DrupalCons, and 10+ DrupalCamps</p>
+    <p>Active in the Chattanooga Drupal Meetup Group</p><br>
+
+  <h2 id="drupalskills">Drupal Skills</h2>
+    <ul>
+      <li>Site building</li>
+      <li>Basic theming</li>
+      <li>Basic module development</li>
+    </ul><br>
+
+  <h2 id="webtechnologies">Web Technologies</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>Twig</li>
+      <li>CSS</li>
+      <li>SCSS</li>
+      <li>Javascript</li>
+      <li>Git</li>
+    </ul><br>
+
+  <h2 id="personal">Personal</h2>
+    <p>Volunteered for 20 years with <a href="https:moreforatlanta.org"><strong>the More for Atlanta charity</strong> - built their current website in Bootstrap</a></p>
+
+  <hr>
+  </div>
+</body>
+
+</html>
