--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <table>
       <thead>
         <tr>
-        <th align="left">Jacqueline Young<em style="font-weight: normal;">a.k.a. Jacqui Tenderwolf</em></th>
+        <th align="left">Jacqueline Young<em style="font-weight: normal;"> a.k.a. Jacqui Tenderwolf</em></th>
         </tr>
       </thead>
       <tbody>
@@ -35,15 +35,15 @@
       <hr>
     
     <h2 id="experience">Experience</h2>
+        <p><strong>Transferable skills:</strong> Strong interpersonal skills working with teams, clients, and customers. Competent with multiple software packages: Wavebid, Maxanet, Adobe Elements. Accustomed to working independently to meet deadlines.</p<>
       <h3><strong>Bullseye Auctions & Appraisals,</strong> Lawrenceville, GA - Appraiser</h3>
         <p><em>2012 - PRESENT</em></p>
       <h3><strong>Amy Martin Auctions,</strong> Atlanta, GA - Auctioneer</h3>
         <p><em>2007 - PRESENT</em></p>
-        <p>As a Georgia-state licensed auctioneer and nationally-certified appraiser, I contracted with the two auction companies listed above  to appraise and sell bank-owned assets at auction.</p> 
         <p><strong>Transferable skills:</strong> Strong interpersonal skills working with teams, clients, and customers. Competent with multiple software packages: Wavebid, Maxanet, Adobe Elements. Accustomed to working independently to meet deadlines.</p<>
       <h3><strong>Cambyco, Inc.,</strong> Atlanta, GA - Administrative Partner</h3>
         <p><em>2000 - 2015</em></p>
-        <p>My ex-husband and I ran a diversified investment firm. Among other projects, we developed day trading software with a team of former Microsoft engineers.</p> 
+        <p>Administered a diversified investment firm. Among other projects, we developed day trading software with a team of former Microsoft engineers.</p> 
         <p><strong>Transferable skills:</strong> Strong team-management skills working with programmers to bring a project from vision board to implementation.</p<>
 
   <h2 id="education">Education</h2>
@@ -51,19 +51,23 @@
       <p>A Drupal career preparatory program through DrupalEasy Academy, licensed by the Florida Department of Education</p>
       <p><em>August - November 2019</em></p>
     <h3><strong>Udemy, Freecodecamp, Drupalize.me,</strong> Online - <em>Course completion</em></h3>
-      <p>HTML5, CSS, SCSS, Javascript, JQuery, Git, Bootstrap, Linus OS, Twig</p>
+      <p>HTML5, CSS, SCSS, Javascript, JQuery, Git, Bootstrap, Linux OS, Twig</p>
       <p><em>January 2019 - PRESENT</em></p>
     <h3><strong>Bennington College,</strong> Vermont - <em>Bachelor of Arts</em></h3>
       <p>Literature and Languages major, Art History minor</p>
       <p><em>Graduated 1992</em></p>
 
   <h2 id="projects">Projects</h2>
-    <p>Develiping a Drupal website to generate appraisal reports.</p>
+    <p>Developing a Drupal website to generate appraisal reports.</p>
 
   <h2 id="drupalcommunity">Drupal Community</h2>
-    <p><a href="https://youtu.be/BGZzTsBjuUE"><strong>"Fixing the Mistakes We All Make as Developers, Leaders and Teams"</strong></a> (2019)<br>
+    <p><a href="https://youtu.be/BGZzTsBjuUE"><strong>
+      "Fixing the Mistakes We All Make as Developers, Leaders and Teams"</strong>
+    </a> (2019)<br>
     DrupalCon Amsterdam, 2019, co-speaker</p>
-    <p><a href="https://www.drupalcampatlanta.com/2019/sessions/hot-topic-conversations-communicating-well-when-you-feel-strongly"><strong>Hot Topic ConversationsL How to Communicate Well When you Feel Strongly</strong></a> (2019)<p>DrupalCamp Atlanta, 2019, speaker</p><br>
+    <p><a href="https://www.drupalcampatlanta.com/2019/sessions/hot-topic-conversations-communicating-well-when-you-feel-strongly"><strong>
+      "Hot Topic Conversations: How to Communicate Well When you Feel Strongly"</strong>
+    </a> (2019)<br>DrupalCamp Atlanta, 2019, speaker</p></br>
     <p>Attended 4 DrupalCons, and 10+ DrupalCamps</p>
     <p>Active in the Chattanooga Drupal Meetup Group</p><br>
 
