--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <hr>
     
     <h2 id="experience">Experience</h2>
-        <p><strong>Transferable skills:</strong> Strong interpersonal skills working with teams, clients, and customers. Competent with multiple software packages: Wavebid, Maxanet, Adobe Elements. Accustomed to working independently to meet deadlines.</p<>
-      <h3><strong>Bullseye Auctions & Appraisals,</strong> Lawrenceville, GA - Appraiser</h3>
+        <p>A Georgia-state licensed auctioneer and nationally-certified appraiser, I worked with the two auction companies listed below:</p>
+    <h3><strong>Bullseye Auctions & Appraisals,</strong> Lawrenceville, GA - Appraiser</h3>
         <p><em>2012 - PRESENT</em></p>
       <h3><strong>Amy Martin Auctions,</strong> Atlanta, GA - Auctioneer</h3>
         <p><em>2007 - PRESENT</em></p>
@@ -67,7 +67,7 @@
     DrupalCon Amsterdam, 2019, co-speaker</p>
     <p><a href="https://www.drupalcampatlanta.com/2019/sessions/hot-topic-conversations-communicating-well-when-you-feel-strongly"><strong>
       "Hot Topic Conversations: How to Communicate Well When you Feel Strongly"</strong>
-    </a> (2019)<br>DrupalCamp Atlanta, 2019, speaker</p></br>
+    </a> (2019)<br>DrupalCamp Atlanta, 2019, speaker</p>
     <p>Attended 4 DrupalCons, and 10+ DrupalCamps</p>
     <p>Active in the Chattanooga Drupal Meetup Group</p><br>
 
@@ -89,8 +89,7 @@
     </ul><br>
 
   <h2 id="personal">Personal</h2>
-    <p>Volunteered for 20 years with <a href="https:moreforatlanta.org"><strong>the More for Atlanta charity</strong> - built their current website in Bootstrap</a></p>
-
+    <p>Volunteered for 20 years 10 hours per week at <a href="https:moreforatlanta.org"><strong>the More for Atlanta charity</strong> that served the homeless in metro-Atlanta with food and shelter. Built their current website in Bootstrap</a></p>
   <hr>
   </div>
 </body>
