--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </ul><br>
 
   <h2 id="personal">Personal</h2>
-    <p>Volunteered for 20 years 10 hours per week at <a href="https:moreforatlanta.org"><strong>the More for Atlanta charity</strong> that served the homeless in metro-Atlanta with food and shelter. Built their current website in Bootstrap</a></p>
+    <p>Volunteered for 20 years 10 hours per week at <a href="https:moreforatlanta.org"><strong>More for Atlanta.org</strong></a> that served the homeless in metro-Atlanta with food and shelter. Built their current website in Bootstrap</p>
   <hr>
   </div>
 </body>
